# azure_iot_sdk_c-release

./: 0001-Added-install-rule-for-package.xml.patch  0001-Build-dynamic-libraries.patch  0001-Disable-compile-errors-on-RHEL.patch  0001-Disable-more-Werrors.patch  0001-Install-package.xml.patch  0001-Install-ros-package-xml.patch  0001-Install-ros-package.xml.patch  0001-Same-patches-as-noetic.patch  0001-Timple-Disable-warnings.patch  0002-Disable-more-Werrors.patch  0002-Explicitly-Wno-strict-aliasing.patch  0002-Timple-Disable-warnings.patch  0003-Explicitly-Wno-strict-aliasing.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
c-utility/configs/: azure_iot_build_rules.cmake
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
noetic/: package.xml
patches/: disable-warnings-as-errors.patch  package.xml
rpm/: ros-galactic-azure-iot-sdk-c.spec  ros-iron-azure-iot-sdk-c.spec  ros-jazzy-azure-iot-sdk-c.spec  ros-kilted-azure-iot-sdk-c.spec  ros-noetic-azure-iot-sdk-c.spec  ros-rolling-azure-iot-sdk-c.spec  template.spec
umqtt/: CMakeLists.txt  readme.md
umqtt/build_all/windows/: build.cmd
umqtt/src/: mqtt_client.c  mqtt_codec.c
